[package]
name = "rust-base62"
version = "0.1.0"
edition = "2021"
authors = [
    "Weipeng Hong <hongweichen8888@sina.com>",
]
license = "GPL-3.0-only"
homepage = "https://github.com/hongweipeng/rust-base62"
repository = "https://github.com/hongweipeng/rust-base62"
documentation = "https://github.com/hongweipeng/rust-base62"
readme = "README.md"
description = "A simple library base62 encode/decode."

[dependencies]
lazy_static = "1.5.0"
